# LetsShareLAN

./: .env_sample  .gitignore  Cargo.toml  LSL_Login_Manager.py  NITP_Login.py  New_LSL_Login_Manager.py  PKGBUILD  README.md  index.html  inferences.md  lets-share-lan.service  style.css
Data Collector/: LSL_Data_Collector.py  New_LSL_Data_Collector.py  data_collector.html  style.css
src/: main.rs
