[package]
name = "lsl"
version = "0.1.0"
edition = "2021"
description = "A simpler and wider way to log in the NITP LAN, with randomly chosen IDs to distribute unused data to those in need "
readme = "README.md"
repository = "https://github.com/adi-g15/LetsShareLAN"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debugln = "0.0.1"
dialoguer = "0.10.2"
dotenv = "0.15.0"
mysql = "22.2.0"
online = "4.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
urlencoding = "2.1.0"
whoami = "1.2.1"
